modified:   00_Linear_Algebraic_Systems/020-linsys-intro.ipynb 	modified:   00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb 	modified:   00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb

--- a/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb
+++ b/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb
@@ -24,8 +24,10 @@
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
     "keywords: matrices, vectors, Gaussian Elimination, forward and back substitution, inverses, LU decomposition\n",
-    "abstract: |\n",
+    "abstract: \n",
     "    Our goal is to get to the good stuff quickly, and so we assume you have already seen things like matrices, vectors, and Gaussian Elimination in Math 1410. Our goal in this chapter is to remind you of what these things are, what they're for, and how they can be automated and scaled out using computer code.  We'll see that with a little bit of work, we can already start asking really interesting questions, and solving some really interesting problems from science, engineering, and economics!\n",
+    "downloads:\n",
+    "  - file: ./lecture_notes/Lecture 01 - Systems of linear equations, vectors, matrices, Gauss Elimination and LU-factorization.pdf\n",
     "---"
    ]
   },
@@ -34,7 +36,9 @@
    "id": "8072dab9-0207-46c6-8c6a-24f1b17bb82d",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb)\n",
+    "\n",
+    "\n"
    ]
   },
   {
