--- a/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
+++ b/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
@@ -37,7 +37,7 @@
    "id": "b6de1190-6bc6-455f-82b7-74e71f966935",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=021-linsys-gauss.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb)\n"
    ]
   },
   {
@@ -306,16 +306,8 @@
    "id": "aa3b79fa-1ae3-4909-86eb-26c6d75ece06",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=021-linsys-gauss.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ceacf782-bad9-4ba5-87b8-69de5077753d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
