--- a/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
+++ b/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
@@ -37,7 +37,7 @@
    "id": "c5f536fc-e789-41e2-a59b-04fc3d792922",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=022-linsys-matvec.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb)\n"
    ]
   },
   {
@@ -658,16 +658,8 @@
    "id": "919cb703-8679-4952-804b-d792a36800c7",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=022-linsys-matvec.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e981a3f3-b5c0-43d7-a3d4-1b8355424780",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
