modified:   00_Linear_Algebraic_Systems/020-linsys-intro.ipynb 	modified:   00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb

--- a/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
+++ b/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
@@ -29,6 +29,8 @@
     "  '\\bm': '\\begin{bmatrix}'\n",
     "  '\\em': '\\end{bmatrix}'\n",
     "  '\\R': '\\mathbb{R}'\n",
+    "downloads:\n",
+    "  - file: lecture_notes/Lecture 01 - Systems of linear equations, vectors, matrices, Gauss Elimination and LU-factorization.pdf\n",
     "---"
    ]
   },
