modified:   00_Linear_Algebraic_Systems/020-linsys-intro.ipynb 	modified:   00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb 	modified:   00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb 	modified:   00_Linear_Algebraic_Systems/023-linsys-gauss.ipynb 	modified:   00_Linear_Algebraic_Systems/023a-linsys-LU.ipynb 	modified:   00_Linear_Algebraic_Systems/024-linsys-perms.ipynb 	modified:   00_Linear_Algebraic_Systems/025-linsys-inverses.ipynb 	modified:   00_Linear_Algebraic_Systems/026-linsys-general.ipynb 	modified:   00_Linear_Algebraic_Systems/Case_Study_on_Network_Flows/027-application-network-flow.ipynb 	modified:   01_Vector_Spaces_and_Bases/031-vector_spaces.ipynb 	modified:   01_Vector_Spaces_and_Bases/032-subspaces.ipynb 	modified:   01_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb 	modified:   01_Vector_Spaces_and_Bases/034-basis_dim.ipynb 	modified:   01_Vector_Spaces_and_Bases/035-kernel_image.ipynb 	modified:   01_Vector_Spaces_and_Bases/036-adj.ipynb 	modified:   01_Vector_Spaces_and_Bases/037-network.ipynb 	modified:   02_Inner_Products_and_Norms/041-inner.ipynb 	modified:   02_Inner_Products_and_Norms/042-angle.ipynb 	modified:   02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb 	modified:   02_Inner_Products_and_Norms/044-clustering.ipynb 	modified:   02_Inner_Products_and_Norms/045-handwritten_digits.ipynb 	modified:   02_Inner_Products_and_Norms/046-color_compression.ipynb 	modified:   02_Inner_Products_and_Norms/Case_Study_On_Transformers/047-transformer-case-study.ipynb 	modified:   02_Inner_Products_and_Norms/Case_Study_On_Transformers/048-transformer-case-study.ipynb 	modified:   03_Orthogonality/051-orthogonal_orthonormal_bases.ipynb 	modified:   03_Orthogonality/052-gram_schmidt.ipynb 	modified:   03_Orthogonality/053-orthogonal_matrices.ipynb

--- a/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb
+++ b/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb)\n",
     "\n",
-    "\n"
+    "{doc}`Lecture notes <../lecture_notes/Lecture 01 - Systems of linear equations, vectors, matrices, Gauss Elimination and LU-factorization.pdf>`"
    ]
   },
   {
@@ -122,11 +122,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ee3c0fd-9db0-4fd2-b284-92f8077e97af",
+   "id": "1274a504-032f-4b33-a7a6-e6ea93a9d808",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5581de4a-28cb-4437-b1a5-7b8f628b19c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
