--- a/00_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
+++ b/00_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
@@ -37,7 +37,9 @@
    "id": "697aea0b-2cea-4387-8ad4-220fe138867f",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=023-linsys-gauss.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/023-linsys-gauss.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 01 - Systems of linear equations, vectors, matrices, Gauss Elimination and LU-factorization.pdf>`"
    ]
   },
   {
@@ -384,19 +386,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dfc16e3-e4dc-4593-9678-c760e3adc17a",
+   "id": "1b5d235d-6b8e-4422-84fe-0dce26358c33",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=023-linsys-gauss.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/023-linsys-gauss.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35f6ccbe-b91f-4bd1-a838-58d11c87eb97",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
