--- a/00_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
+++ b/00_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
@@ -34,9 +34,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c842cd0f-7e4c-440f-bf7c-6e04a0db062d",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/023a-linsys-LU.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 01 - Systems of linear equations, vectors, matrices, Gauss Elimination and LU-factorization.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "efca8556-3e7f-4f1c-b466-04f0e14b12e5",
    "metadata": {},
    "source": [
+    "## Reading\n",
+    "\n",
     "This section is based on ALA Ch 1.3, Ch 5.3 of Jessy Grizzles [ROB 101 notes](https://github.com/michiganrobotics/rob101/blob/main/Fall%202021/Textbook/ROB_101_December_2021_Grizzle.pdf)."
    ]
   },
@@ -274,6 +286,22 @@
     "\n",
     "Now, if we go back to solving our system using $LU$-factorization, we have that $LU\\vv x = \\vv b$ which we can turn into $L\\vv z = \\vv b$ and $U\\vv x = \\vv z$.  We saw that we can solve that $L\\vv z = b$ by forward substitution, but notice that we also have that $ML\\vv z = \\vv z = M \\vv b$, i.e., the matrix $M$ that reduces our original system of equations to upper triangular form is actually performing this forward substitution."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bb71568-1a8e-4a4a-bf51-a7f81e6a4def",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/023a-linsys-LU.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b0a8a6a-dbc5-449e-92ce-5b54b1bed122",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
