--- a/00_Linear_Algebraic_Systems/024-linsys-perms.ipynb
+++ b/00_Linear_Algebraic_Systems/024-linsys-perms.ipynb
@@ -34,6 +34,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc99dddf-5c7e-4c92-8111-fb156f6af7fe",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/024-linsys-perms.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 02 - Pivots + Permutations, Matrix Inverses (Gauss-Jordan), Transposes, Symmetric Matrices, and General Linear Systems.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "efca8556-3e7f-4f1c-b466-04f0e14b12e5",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -454,6 +464,22 @@
     "P, L, U = lu(A)\n",
     "print(\"P: \\n\", P, \"\\nL: \\n\", L, \"\\nU: \\n\", U)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39165c0f-fa19-44ce-8eac-09ed6d261942",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/024-linsys-perms.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14add8ac-bb33-4595-ac4a-38289ae1ed04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
