--- a/00_Linear_Algebraic_Systems/025-linsys-inverses.ipynb
+++ b/00_Linear_Algebraic_Systems/025-linsys-inverses.ipynb
@@ -34,6 +34,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "04e67bbe-3d79-4a20-8327-f68b183e9790",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/025-linsys-inverses.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 02 - Pivots + Permutations, Matrix Inverses (Gauss-Jordan), Transposes, Symmetric Matrices, and General Linear Systems.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "efca8556-3e7f-4f1c-b466-04f0e14b12e5",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -503,6 +513,22 @@
     "```\n",
     "````"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2e6b1da-e6cf-4009-9603-58023cee6b91",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/025-linsys-inverses.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ca3f7e4-e541-4da1-887d-8edce67ef328",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
