--- a/00_Linear_Algebraic_Systems/026-linsys-general.ipynb
+++ b/00_Linear_Algebraic_Systems/026-linsys-general.ipynb
@@ -34,6 +34,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fabf909e-c36f-4ad3-8b5c-a3f3cb917dcc",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/026-linsys-general.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 02 - Pivots + Permutations, Matrix Inverses (Gauss-Jordan), Transposes, Symmetric Matrices, and General Linear Systems.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "efca8556-3e7f-4f1c-b466-04f0e14b12e5",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -488,6 +498,14 @@
     ":::\n",
     "\n",
     "Having primarily taken the algebric route so far to discuss linear systems, this brief geometric perspective will serve as an introduction to delve deep into other concepts in subsequent lectures that has strong geometric conncetions. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "862d781c-608e-4964-9300-b4a22a9d0fd8",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/026-linsys-general.ipynb)"
    ]
   }
  ],
