--- a/01_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
+++ b/01_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
@@ -34,6 +34,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ef94889-cc25-4032-afee-9fee646ba2d5",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 03 - Vector Spaces 1_ Definitions, Subspaces, Span, Linear Independence, Basis, and Dimension.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a46f522d-2995-412b-92cf-9ff085526b18",
    "metadata": {},
    "source": [
@@ -372,6 +382,22 @@
     "```\n",
     ":::"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc57efc2-ecae-47c6-a05f-0b6d496f76b5",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37cb079a-143b-49a0-8071-d7e9cfd9b882",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
