--- a/01_Vector_Spaces_and_Bases/037-network.ipynb
+++ b/01_Vector_Spaces_and_Bases/037-network.ipynb
@@ -34,6 +34,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "32164906-4a16-4c63-a6e4-380f298aebd4",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/037-network.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 04 - The Fundamental Matrix Subspaces (Kernel, Image, CoKernel, CoImage), Fundamental Theorem of Linear Algebra, and a brief interlude on the Matrix Transpose.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a46f522d-2995-412b-92cf-9ff085526b18",
    "metadata": {},
    "source": [
@@ -197,6 +207,22 @@
     "\n",
     "We will understand where the statement in [](#challenge) comes from in the next couple of lectures! "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c23418a8-5898-4562-a4b1-6226d4bdda1e",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/037-network.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c974079e-ddfa-487d-9623-9285e358c5c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
