--- a/02_Inner_Products_and_Norms/041-inner.ipynb
+++ b/02_Inner_Products_and_Norms/041-inner.ipynb
@@ -34,6 +34,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "288f6f57-4944-4cfc-9122-ef8b377f1739",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/041-inner.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 05 - Inner products, length, angles, and norms.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a46f522d-2995-412b-92cf-9ff085526b18",
    "metadata": {},
    "source": [
@@ -397,6 +407,22 @@
     "print(\"Norm of v1: \", np.linalg.norm(v1))\n",
     "print(\"Induced norm of v1: \", np.sqrt(np.dot(v1, v1)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4671a2b-50e6-476c-8b7e-900a619e0adb",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/041-inner.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d460d42-dbff-4f57-91b8-6b5ee954ee51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
