--- a/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
+++ b/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
@@ -29,6 +29,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 06 - Clustering and K-means.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reading\n",
     "\n",
     "Material related to this page, as well as additional exercises, can be found in VMLS 3.2."
@@ -244,6 +253,13 @@
     ":width: 400px\n",
     ":align: center\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb)"
    ]
   },
   {
