--- a/02_Inner_Products_and_Norms/045-handwritten_digits.ipynb
+++ b/02_Inner_Products_and_Norms/045-handwritten_digits.ipynb
@@ -29,6 +29,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/045-handwritten_digits.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "K-means falls into the category of *unsupervised machine learning* algorithms, or algorithms which take a dataset and output patterns from that dataset. K-means, being a clustering algorithm, extracts clusters from a dataset of vectors. This is in contrast to *supervised machine learning* algorithms, which take a dataset consisting of input-output pairs, and try to learn a function mapping inputs to outputs.\n",
     "\n",
     "In this case study, we're going to apply the [k-means algorithm](#k-means-alg) to a dataset consisting of 1797 handwritten digits. Our objective is to identify groups of similar digits. To that end, we will:\n",
@@ -251,6 +258,13 @@
     "\n",
     "Overall, an accuracy of 90% shows that using k-means, we can essentially build a digit classifier *without reference to any known labels*!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/045-handwritten_digits.ipynb)"
+   ]
   }
  ],
  "metadata": {
@@ -269,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
