--- a/02_Inner_Products_and_Norms/Case_Study_On_Transformers/048-transformer-case-study.ipynb
+++ b/02_Inner_Products_and_Norms/Case_Study_On_Transformers/048-transformer-case-study.ipynb
@@ -29,6 +29,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "66be9dc1-cbfb-44b1-bb86-5ded89b11532",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/Case_Study_On_Transformers/048-transformer-case-study.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a417db5-0891-4e82-9c09-89ca997c687c",
    "metadata": {},
    "source": [
@@ -390,12 +398,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "448c152e-e653-4e40-a559-23bf18c1b81d",
+   "cell_type": "markdown",
+   "id": "f24ff8a2-3b2f-4091-8505-38539a70fbc9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/Case_Study_On_Transformers/048-transformer-case-study.ipynb)"
+   ]
   }
  ],
  "metadata": {
