--- a/03_Orthogonality/051-orthogonal_orthonormal_bases.ipynb
+++ b/03_Orthogonality/051-orthogonal_orthonormal_bases.ipynb
@@ -29,6 +29,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/051-orthogonal_orthonormal_bases.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 07 - Orthogonality, Gram-Schmidt, Orthogonal Matrices, and QR-Factorization.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reading\n",
     "\n",
     "Material related to this page, as well as additional exercises, can be found in ALA 4.1.\n",
@@ -289,6 +298,13 @@
     "While this may look very abstract, this is exactly the same mechanism underpinning things like the Discrete Fourier Transform, which is a change of a signal to a (complex) orthonormal basis in function space, where each basis element is a complex sinusoid.\n",
     "\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/051-orthogonal_orthonormal_bases.ipynb)"
    ]
   },
   {
