--- a/03_Orthogonality/052-gram_schmidt.ipynb
+++ b/03_Orthogonality/052-gram_schmidt.ipynb
@@ -29,6 +29,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/052-gram_schmidt.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 07 - Orthogonality, Gram-Schmidt, Orthogonal Matrices, and QR-Factorization.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reading\n",
     "\n",
     "Material related to this page, as well as additional exercises, can be found in ALA 4.2.\n",
@@ -183,6 +192,20 @@
     "We know that every vector space has a basis. The GSP tells us something very important: given any basis for a finite dimensional [inner product space](#inner-product-space-defn) space, we can always \"orthogonalize\" it. That is, every finite dimensional inner product space has an orthonormal basis!\n",
     ":::\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/052-gram_schmidt.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
