--- a/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
+++ b/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
@@ -39,7 +39,9 @@
    "id": "b6de1190-6bc6-455f-82b7-74e71f966935",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 01 - Systems of linear equations, vectors, matrices, Gauss Elimination and LU-factorization.pdf>`\n"
    ]
   },
   {
@@ -305,11 +307,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa3b79fa-1ae3-4909-86eb-26c6d75ece06",
+   "id": "2593654c-e8cc-4204-a69f-22d0b57afef1",
    "metadata": {},
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25bb96a4-7474-48b3-a306-73c9e875243a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
