--- a/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
+++ b/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
@@ -37,7 +37,9 @@
    "id": "c5f536fc-e789-41e2-a59b-04fc3d792922",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 01 - Systems of linear equations, vectors, matrices, Gauss Elimination and LU-factorization.pdf>`"
    ]
   },
   {
@@ -655,11 +657,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "919cb703-8679-4952-804b-d792a36800c7",
+   "id": "63328456-9e9a-451c-89db-87f6948b1771",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3493d91-82a1-4820-8cd8-a137bc9900e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
