--- a/00_Linear_Algebraic_Systems/Case_Study_on_Network_Flows/027-application-network-flow.ipynb
+++ b/00_Linear_Algebraic_Systems/Case_Study_on_Network_Flows/027-application-network-flow.ipynb
@@ -29,6 +29,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4699e57-5018-454c-b53a-d00c04df7cdb",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/Case_Study_on_Network_Flows/027-application-network-flow.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "170438e7",
    "metadata": {},
    "source": [
@@ -798,6 +806,14 @@
     "## Related Resources\n",
     "If you're interested in modeling traffic flow, check out the [Cellular Transmission Model](https://connected-corridors.berkeley.edu/planning-system/assessing-potential-project-benefits-analysis-modeling-and-simulation/phases-ams-2) and [Networked Macroscopic Fundamental Diagram](https://arxiv.org/abs/2406.10433) models for more info on how traffic flow is modeled in practice, and some approaches to control traffic lights."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3a0d45b-d101-4443-8d3a-0e64aabec7c0",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/Case_Study_on_Network_Flows/027-application-network-flow.ipynb)"
+   ]
   }
  ],
  "metadata": {
@@ -820,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
