--- a/01_Vector_Spaces_and_Bases/031-vector_spaces.ipynb
+++ b/01_Vector_Spaces_and_Bases/031-vector_spaces.ipynb
@@ -34,6 +34,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea9a947c-b710-4a55-9ba7-42779a516120",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/031-vector_spaces.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 03 - Vector Spaces 1_ Definitions, Subspaces, Span, Linear Independence, Basis, and Dimension.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a46f522d-2995-412b-92cf-9ff085526b18",
    "metadata": {},
    "source": [
@@ -301,6 +311,22 @@
     "```\n",
     ":::\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea24a160-262e-4660-a436-bbd52b488ac1",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/031-vector_spaces.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fef11782-d880-4655-ba01-164fce4285fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
