--- a/01_Vector_Spaces_and_Bases/032-subspaces.ipynb
+++ b/01_Vector_Spaces_and_Bases/032-subspaces.ipynb
@@ -34,6 +34,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7cc1a707-4f3c-4f9e-b70e-8e7a7c5d5376",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/032-subspaces.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 03 - Vector Spaces 1_ Definitions, Subspaces, Span, Linear Independence, Basis, and Dimension.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a46f522d-2995-412b-92cf-9ff085526b18",
    "metadata": {},
    "source": [
@@ -195,6 +205,22 @@
     "2. The spcae $C^0(I)$ of all continuous functions defined on $I$. Showing closure of this space relies on knowing that if $f(x)$ and $g(x)$ are continous, then so is $cf(x) + dg(x)$ for any $c, d\\in \\mathbb{R}$, something you may have seen in Math 1400/1410.\n",
     ":::"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "918abc5f-b2c1-47f1-b852-18c6b97f87af",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/032-subspaces.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74442f05-b322-4e70-8e62-ccb51701fd09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
