--- a/01_Vector_Spaces_and_Bases/035-kernel_image.ipynb
+++ b/01_Vector_Spaces_and_Bases/035-kernel_image.ipynb
@@ -34,6 +34,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "18580bf2-4547-4ee9-bdfb-981c7535bc6c",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/035-kernel_image.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 04 - The Fundamental Matrix Subspaces (Kernel, Image, CoKernel, CoImage), Fundamental Theorem of Linear Algebra, and a brief interlude on the Matrix Transpose.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a46f522d-2995-412b-92cf-9ff085526b18",
    "metadata": {},
    "source": [
@@ -408,6 +418,22 @@
     "```\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94c3cf97-b8e5-492e-8648-d7b4c141daf0",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/035-kernel_image.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ece6689-96dd-40ec-b415-6b7031b90955",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
