--- a/01_Vector_Spaces_and_Bases/036-adj.ipynb
+++ b/01_Vector_Spaces_and_Bases/036-adj.ipynb
@@ -34,6 +34,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49828b61-5670-44c3-a88b-ddcff2a5fc0b",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/036-adj.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 04 - The Fundamental Matrix Subspaces (Kernel, Image, CoKernel, CoImage), Fundamental Theorem of Linear Algebra, and a brief interlude on the Matrix Transpose.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a46f522d-2995-412b-92cf-9ff085526b18",
    "metadata": {},
    "source": [
@@ -342,11 +352,27 @@
     "dim_col = len(A_col)\n",
     "rank = A.rank()\n",
     "dim_null = len(A_Null)\n",
-    "n_cols = A.shape[1] # what is A.shape[0]?\n",
+    "n_cols = A.shapev[1] # what is A.shape[0]?\n",
     "\n",
     "print(\"Rank: \", rank, \". Dimension of column space is \", dim_col, \"and null space is \", dim_null, \n",
     "      \"\\nNumber of columns n is \", n_cols)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f04e5c7c-f681-4b1e-945f-e676b0f052f5",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/036-adj.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e037c5f-f50c-4d93-ad0b-4f1e0adde3b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
