--- a/02_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Inner_Products_and_Norms/042-angle.ipynb
@@ -34,6 +34,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "98935a65-a56d-4f4b-9225-e09a1b07dbf1",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/042-angle.ipynb)\n",
+    "\n",
+    "{doc}`Lecture notes <../lecture_notes/Lecture 05 - Inner products, length, angles, and norms.pdf>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a46f522d-2995-412b-92cf-9ff085526b18",
    "metadata": {},
    "source": [
@@ -387,6 +397,22 @@
     "vinf = np.linalg.norm(v, ord=np.inf)\n",
     "print(\"\\n1-norm: \", v1, \"\\n2-norm: \", v2, \"\\ninfinity norm: \", vinf)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbe38989-42b7-47d9-9f74-bebfe56b7b69",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/042-angle.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e05564a-949e-45fa-9293-59f27e8e1b34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
