--- a/02_Inner_Products_and_Norms/Case_Study_On_Transformers/047-transformer-case-study.ipynb
+++ b/02_Inner_Products_and_Norms/Case_Study_On_Transformers/047-transformer-case-study.ipynb
@@ -29,6 +29,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2cb5d88c-e8e1-4be6-aa17-80f32a96f291",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/Case_Study_On_Transformers/048-transformer-case-study.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a417db5-0891-4e82-9c09-89ca997c687c",
    "metadata": {},
    "source": [
@@ -615,12 +623,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "448c152e-e653-4e40-a559-23bf18c1b81d",
+   "cell_type": "markdown",
+   "id": "e7bb0100-8000-473e-9f10-842d63f020ca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/Case_Study_On_Transformers/048-transformer-case-study.ipynb)"
+   ]
   }
  ],
  "metadata": {
@@ -639,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
