added numpy for orthogonality chapter, and fixed the theorem->proof dropdown

--- a/03_Orthogonality/052-gram_schmidt.ipynb
+++ b/03_Orthogonality/052-gram_schmidt.ipynb
@@ -194,18 +194,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Orthogonal basis (not orthonormal): \n",
+      " [array([-2,  1,  0,  0]), array([0.2, 0.4, 1. , 0. ]), array([ 0.5,  1. , -0.5,  1. ])]\n",
+      "Orthonormal basis: \n",
+      " [array([-0.89442719,  0.4472136 ,  0.        ,  0.        ]), array([0.18257419, 0.36514837, 0.91287093, 0.        ]), array([ 0.31622777,  0.63245553, -0.31622777,  0.63245553])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The Gram Schmidt process\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "x1 = np.array([-2, 1, 0, 0])\n",
+    "x2 = np.array([1, 0, 1, 0])\n",
+    "x3 = np.array([3, 0, 0, 1])\n",
+    "\n",
+    "x = [x1, x2, x3] # basis that is not orthogonal\n",
+    "v = [x1] # initialize the basis that is orthogonal\n",
+    "u = [x1/np.linalg.norm(x1)] # initialize the basis that is orthogonal\n",
+    "\n",
+    "for i in range(1, len(x)):\n",
+    "    v_i = x[i]\n",
+    "    for j in range(i):\n",
+    "        v_i = v_i - (np.dot(x[i], v[j])/np.dot(v[j], v[j]))*v[j]\n",
+    "    v.append(v_i)\n",
+    "    u.append(v_i/np.linalg.norm(v_i))\n",
+    "\n",
+    "print(\"Orthogonal basis (not orthonormal): \\n\", v)\n",
+    "print(\"Orthonormal basis: \\n\", u)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/052-gram_schmidt.ipynb)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
