--- a/03_Orthogonality/051-orthogonal_orthonormal_bases.ipynb
+++ b/03_Orthogonality/051-orthogonal_orthonormal_bases.ipynb
@@ -126,16 +126,61 @@
     "    \\quad \\vv{v_3} = \\frac{\\vv{b_3}}{\\|\\vv{b_3}\\|} = \\frac{1}{\\sqrt{30}}\\bm 5\\\\-2\\\\1\\em\n",
     "\\end{align*}\n",
     "\n",
-    "This example highlights a more general principle, which is again quite useful: if $\\vv{v_1}, ..., \\vv{v_n}$ are mutually orthogonal, then they form a basis for their [span](#ln_comb) $W = \\text{span}\\{ {v_1}, ..., \\vv{v_n} \\} \\subseteq V$, which is thus a [subspace](#sub_def) of $\\text{dim}(W) = n$. It then follows that if $\\text{dim}(V) = n$, then $\\vv{v_1}, ..., \\vv{v_n}$ are an orthogonal basis for $V$ (this is precisely the observation we used in this example).\n",
-    ":::\n",
+    "This example highlights a more general principle, which is again quite useful: if $\\vv{v_1}, ..., \\vv{v_n}$ are mutually orthogonal, then they form a basis for their [span](#ln_comb) $W = \\text{span}\\{ {\\vv{v_1}}, ..., \\vv{v_n} \\} \\subseteq V$, which is thus a [subspace](#sub_def) of $\\text{dim}(W) = n$. It then follows that if $\\text{dim}(V) = n$, then $\\vv{v_1}, ..., \\vv{v_n}$ are an orthogonal basis for $V$ (this is precisely the observation we used in this example).\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The basis represented as a matrix: \n",
+      " [[ 1  0  5]\n",
+      " [ 2  1 -2]\n",
+      " [-1  2  1]]\n",
+      "Normalized basis: \n",
+      " [[ 0.40824829  0.          0.91287093]\n",
+      " [ 0.81649658  0.4472136  -0.36514837]\n",
+      " [-0.40824829  0.89442719  0.18257419]]\n",
+      "Norm of each basis vector: \n",
+      " [1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Normalizing\n",
     "\n",
+    "import numpy as np\n",
+    "\n",
+    "b = np.array([[1, 0, 5],\n",
+    "              [2, 1, -2],\n",
+    "              [-1, 2, 1]])\n",
+    "print(\"The basis represented as a matrix: \\n\", b)\n",
+    "\n",
+    "b_norm = np.linalg.norm(b, axis=0) # notice across what axis we are computing the norm\n",
+    "b_normalized = b / b_norm # Dividing a matrix by a vector!!!\n",
+    "\n",
+    "print(\"Normalized basis: \\n\", b_normalized)\n",
+    "\n",
+    "print(\"Norm of each basis vector: \\n\", np.linalg.norm(b_normalized, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Working in Orthogonal Bases\n",
     "\n",
     "So why do we care about orthogonal (or even better, orthonormal) bases? Turns out they make a lot of the computations that we've been doign so far MUCH easier.\n",
     "\n",
     "We'll start with some important properties of computing a vector's coordinates with respect to an orthogonal basis.\n",
     "\n",
-    ":::{prf:theorem} Coordinates and Norm in an Orthonormal Basis\n",
+    "```{prf:theorem} Coordinates and Norm in an Orthonormal Basis\n",
     ":label:coordinates-norm-orthonormal-thm\n",
     "\n",
     "Let $\\vv{u_1}, ..., \\vv{u_n}$ be an orthonormal basis for an inner product space $V$. Then any $\\vv v\\in V$ is a linear combination\n",
@@ -156,7 +201,10 @@
     "    \\| \\vv v \\|^2 = c_1^2 + ... + c_n^2 = \\sum_{i=1}^{n}{\\langle \\vv v, \\vv{u_i}\\rangle^2}\n",
     "\\end{align*}\n",
     "\n",
-    "**Proof.** The trick here is to exploit that \n",
+    ":::{prf:proof} Proof of [](#coordinates-norm-orthonormal-thm)\n",
+    ":label: proof-coordinates-norm-orthonormal-thm\n",
+    ":class: dropdown\n",
+    "The trick here is to exploit that \n",
     "\n",
     "\\begin{align*}\n",
     "    \\langle \\vv{u_i}, \\vv{u_j} \\rangle = \\begin{cases} 0 \\quad\\text{if $i \\neq j$}\\\\ 1 \\quad\\text{if $ i = j$}\\end{cases}\n",
@@ -181,6 +229,7 @@
     "    &= \\sum_{i=1}^{n}{c_i^2}\\quad\\text{($\\|\\vv{u_i} = 1\\|$)}\n",
     "\\end{align*}\n",
     ":::\n",
+    "```\n",
     "\n",
     "````{exercise}  Rewriting a vector in an orthonormal basis\n",
     ":label: coordinates-orthonormal-ex\n",
@@ -220,7 +269,7 @@
     "\n",
     "A very small change to the above allows us to extend these ideas to orthogonal, but not orthonormal, bases:\n",
     "\n",
-    ":::{prf:theorem} Coordinates and Norm in an Orthogonal Basis\n",
+    "```{prf:theorem} Coordinates and Norm in an Orthogonal Basis\n",
     ":label:coordinates-norm-orthogonal-thm\n",
     "\n",
     "If $\\vv{v_1}, ..., \\vv{v_n}$ are an orthogonal basis, then $\\vv v\\in V$ can be written\n",
@@ -235,10 +284,12 @@
     "    \\|\\vv v\\|^2 = a_1^2 \\|v_1\\|^2 + ... + a_n^2 \\|v_n\\|^2\n",
     "\\end{align*}\n",
     "\n",
-    "**Proof.** This is derived using our [theorem for orthonormal bases](#coordinates-norm-orthonormal-thm) by rescaling the $\\vv{v_i}$ to $\\frac{\\vv{v_i}}{\\|\\vv{v_i}\\|}$.\n",
+    ":::{prf:proof} Proof of [](#coordinates-norm-orthogonal-thm)\n",
+    ":label: proof-coordinates-norm-orthogonal-thm\n",
+    ":class: dropdown\n",
+    "This is derived using our [theorem for orthonormal bases](#coordinates-norm-orthonormal-thm) by rescaling the $\\vv{v_i}$ to $\\frac{\\vv{v_i}}{\\|\\vv{v_i}\\|}$.\n",
     "\n",
-    ":::\n",
-    "\n",
+    "```\n",
     "\n",
     ":::{prf:example} Change of coordinates to an orthogonal basis of a function space\n",
     ":label: coordinates-orthogonal-ex\n",
@@ -306,13 +357,6 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/051-orthogonal_orthonormal_bases.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
