--- a/03_Orthogonality/054-proj_subspace.ipynb
+++ b/03_Orthogonality/054-proj_subspace.ipynb
@@ -160,20 +160,77 @@
     "```{prf:example} \n",
     ":label: ex_line_plane\n",
     "\n",
-    "If $V = \\mathbb{R}^3$ and we are using the dot product, then the plane $W \\subset \\mathbb{R}^3$ defined by $2x - y + 3z = 0$ is orthogonal to the line $Z$ spanned by the normal vector $\\vv n = \\bm 2 \\\\ -1 \\\\ 3\\em$. We can check orthogonality as follow: any $\\vv w = \\bm x \\\\ y \\\\ z\\em \\in W$ satisfies $\\vv n \\cdot \\vv w = 2x - y + 3z = 0.$\n",
+    "If $V = \\mathbb{R}^3$ and we are using the dot product, then the plane $W \\subset \\mathbb{R}^3$ defined by $x + y - 2z = 0$ is orthogonal to the line $Z$ spanned by the normal vector $\\vv n = \\bm 1 \\\\ 1 \\\\ -2\\em$. We can check orthogonality as follow: any $\\vv w = \\bm x \\\\ y \\\\ z\\em \\in W$ satisfies $\\vv n \\cdot \\vv w = x + y - 2z = 0.$\n",
     "```\n",
     "\n",
     ":::{prf:definition} Orthogonal complement\n",
     ":label: orth-compl\n",
-    "Hi\n",
+    "The orthogonal complement $W^{\\perp}$ of a subspace $W \\subset V$ is defined as the set of all vectors that are orthogonal to $W$:\n",
+    "\\begin{equation}\n",
+    "W^{\\perp} = \\{\\vv v\\ in V | \\langle \\vv v, \\vv w\\rangle = 0 \\ \\textrm{for all} \\ \\vv w \\in W\\}.\n",
+    "\\end{equation}\n",
     ":::\n",
     "\n",
+    "The orthogonal complement to a line is given in the figure below, which is discussed in [](#ex_line_plane).\n",
     ":::{figure}../figures/05-orth_line_plane.jpg\n",
     ":label:orth_line_plane\n",
     ":alt:Orthogonal subspaces\n",
     ":width: 400px\n",
     ":align: center\n",
-    ":::"
+    ":::\n",
+    "\n",
+    "```{note} Properties\n",
+    "\n",
+    "1. $W^{\\perp}$ is also a subspace.\n",
+    "2. $W \\cap W^{\\perp} = \\{\\vv 0\\}$, i.e., $W$ and $W^{\\perp}$ are [transverse](https://en.wikipedia.org/wiki/Transversality_(mathematics)) and only intersect at the origin.\n",
+    "\n",
+    "```\n",
+    "\n",
+    "```{prf:example} \n",
+    ":label: ex_complement\n",
+    "\n",
+    "Consider the plane $W \\subset \\mathbb{R}^3$ defined by the equation $x + y - 2z = 0$. Then, $W^{\\perp} = $span$\\{\\vv n\\} = \\{(\\epsilon, \\epsilon, -2\\epsilon) | \\epsilon \\in \\mathbb{R}\\}$ is the line spanned by its defining normal $\\vv n = (1, 1, -2)$.\n",
+    "\n",
+    "If we consider instead the set $Z = $span$\\{\\vv n\\}$, then $Z^{\\perp} = W$, i.e., the orthogonal complement to the line $Z$ is the plane $W$. This also highlights that $Z^{\\perp} = \\left(W^{\\perp}\\right)^{\\perp} = W$, i.e., taking the  orthogonal complement twice brings you back to where you started.\n",
+    "```\n",
+    "\n",
+    "```{note}\n",
+    "Given a subspace $W \\subset V$ and its orthogonal complement $W^{\\perp}$, we can uniquely decompose any vector $\\vv v \\in V$ into $\\vv v = \\vv w + \\vv z$, where $\\vv w \\in W$ and $\\vv z \\in W^{\\perp}$. The geometric intuition is given below.\n",
+    ":::{figure}../figures/05-orth_decom.jpg\n",
+    ":label:orth_decom\n",
+    ":alt:Orthogonal decomposition\n",
+    ":width: 400px\n",
+    ":align: center\n",
+    ":::\n",
+    "\n",
+    "A useful consequence of the above is that if $\\vv v = \\vv w + \\vv z$ with $\\vv w \\in W$ and $\\vv z \\in W^{\\perp}$, then $\\|\\vv v\\|^2 = \\|\\vv w\\|^2 + \\|\\vv z\\|^2$, because $\\langle \\vv w, \\vv z\\rangle = 0 $ and is essentially a generalization of Pythagoras' theorem. \n",
+    "\n",
+    "Another direct consequence is given below. \n",
+    "```\n",
+    "\n",
+    "```{prf:proposition} \n",
+    ":label:prop_comp\n",
+    "If $W \\subset V$ is a subspace with dim$W = n$ and dim$V = m$, then dim$W^{\\perp} = m - n$.\n",
+    "```\n",
+    "\n",
+    "In [](#ex_complement), $W$ is plane, with dim$W = 2$. Then, we can conclude that dim$W^{\\perp} = 1$, i.e., $W^{\\perp}$ is a line, which is indeed what we saw previously."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TO DO: Examples \n",
+    "\n",
+    "similar to ALA 4.42, 4.43"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Orthogonality of the Fundamental Matrix Subspace\n",
+    "\n"
    ]
   },
   {
