lec 08 content added until before least squares

--- a/03_Orthogonality/054-proj_subspace.ipynb
+++ b/03_Orthogonality/054-proj_subspace.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "If we have access to an orthonormal basis for $W \\subset V$, constructing the orthogonal projection of $\\vv v \\in V$ onto $W$ becomes quite simple as given below.\n",
     "\n",
-    "```{prf:theorem} Orthonormal basis\n",
+    "```{prf:theorem}\n",
     ":label:thm_orth_basis\n",
     "Let $\\vv u_1, \\vv u _2, \\ldots, \\vv u_n$ be an orthonormal basis for the subspace $W \\subset V$. Then, the orthogonal projection of $\\vv v \\in V$ onto $\\vv w \\in W$ is given by \n",
     "\n",
@@ -230,6 +230,42 @@
    "metadata": {},
    "source": [
     "# Orthogonality of the Fundamental Matrix Subspace\n",
+    "\n",
+    "```{prf:theorem}\n",
+    ":label:thm_orth_fund\n",
+    "Let $A \\in \\mathbb{R}^{m \\times n}$ be an $m \\times n$ matrix. Then,\n",
+    "$$\n",
+    "\\textrm{Null}(A) = \\textrm{Row}(A)^{\\perp} = \\textrm{Col}(A^{\\top})^{\\perp} \\subset \\mathbb{R}^n \\\\\n",
+    "\\textrm{and} \\\\\n",
+    "\\textrm{LNull}(A) = \\textrm{Null}(A^{\\top}) = \\textrm{Col}(A)^{\\perp} \\subset \\mathbb{R}^m\n",
+    "$$\n",
+    "```\n",
+    "\n",
+    "A practical consequence of [](#thm_orth_fund) is given below.\n",
+    "\n",
+    "```{prf:theorem} Fredholm alternative\n",
+    ":label:thm_lin_sys\n",
+    "A linear system $A \\vv x = \\vv b$ has a solution if and only if $\\vv b$ is orthogonal to LNull$(A)$.\n",
+    "\n",
+    ":::{prf:proof} Proof of [](#thm_lin_sys)\n",
+    ":label: proof-thm_lin_sys\n",
+    ":class: dropdown\n",
+    "\n",
+    "We know that $A \\vv x = \\vv b$ if and only if $b \\in $Col$(A)$ since $A \\vv x$ is a linear combination of the columns of $A$. \n",
+    "\n",
+    "From [](#thm_orth_fund) we know that $\\textrm{LNull}(A) = \\textrm{Col}(A)^{\\perp}$, or equivalently, that $\\textrm{Col}(A) = \\textrm{LNull}(A)^{\\perp} = \\textrm{Null}(A^{\\top})^{\\perp}$. This means that $\\vv b \\in $Null$(A^{\\top})^{\\perp}$, or equivalently, that $\\langle \\vv y, \\vv b\\rangle = 0$ for all $\\vv y $ such that $A^{\\top}\\vv y = \\vv 0$. This is perfectly reasonable. Let's assume that we can find a $\\vv y \\in$Null$(A)^{\\top}$ for which $\\langle \\vv y, \\vv b\\rangle \\neq 0$.  This implies that we have an inconsistent set of equations, which can be seen as follows. \n",
+    "\n",
+    "\n",
+    "Let $\\vv x$ be any solution to $A \\vv x = \\vv b$, and take the inner product of both sides with $\\vv y$:\n",
+    "\\begin{equation}\n",
+    "\\label{proof-thm_lin_sys-eqn}\n",
+    "\\langle \\vv y, A \\vv x\\rangle = \\langle \\vv y, \\vv b\\rangle.\n",
+    "\\end{equation}\n",
+    "Since $\\vv y \\in $LNull$(A)$, $\\langle \\vv y, A \\vv x\\rangle = \\vv y^{\\top} A \\vv x = 0$ for any $\\vv x$, meaning we must have $\\langle \\vv y, \\vv b\\rangle = 0$. However, we picked a special $\\vv y$ such that $\\langle \\vv y, \\vv b\\rangle \\neq 0$. There is a contradiction! This might have been because of a mistake in our reasoning: either $A \\vv x = \\vv b$ has no solution, or $\\langle \\vv y, \\vv b \\rangle = 0$. \n",
+    "\n",
+    "Another way of thinking about [](#proof-thm_lin_sys-eqn): if $\\vv y^{\\top} A \\vv x = 0$, which means we can add the equations in the entries of $A \\vv x$ together, weighted by the elements of $\\vv y$, so that they cancel to zero. So, the only way for $A \\vv x = \\vv b$ to be compatible is if the same weighted combination of the RHS, $\\vv y^{\\top} \\vv b$, also equals 0. \n",
+    ":::\n",
+    "```\n",
     "\n"
    ]
   },
@@ -237,8 +273,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/055-proj_subspace.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/054-proj_subspace.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
