chapter 1 section numbering

--- a/00_Ch_1_Linear_Algebraic_Systems/020-linsys-intro.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/020-linsys-intro.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Why Linear Systems?\n",
+    "title: 1.1 Why Linear Systems?\n",
     "subject: Linear Algebraic Systems\n",
     "subtitle: They're everywhere!\n",
-    "short_title: Why Linear Systems?\n",
+    "short_title: 1.1 Why Linear Systems?\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -47,7 +47,7 @@
    "metadata": {},
    "source": [
     "## Reading\n",
-    "Material related to this chapter, as well as additional exercises, can be found in LAA Ch. 1, ALA Ch. 1, and ILA Ch. 1."
+    "Material related to this chapter, as well as additional exercises, can be found in LAA Ch. 1, ALA Ch. 1, and ILA Ch. 1. "
    ]
   },
   {
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
