--- a/00_Ch_1_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Solving Linear Systems via Gaussian Elimination\n",
+    "title: 1.2 Solving Linear Systems via Gaussian Elimination\n",
     "subject:  Linear Algebraic Systems\n",
     "subtitle: Forward elimination and back substitution are all you need\n",
-    "short_title: Gaussian Elimination\n",
+    "short_title: 1.2 Gaussian Elimination\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -342,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
