--- a/00_Ch_1_Linear_Algebraic_Systems/026-linsys-general.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/026-linsys-general.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: General Linear Systems\n",
+    "title: 1.8 General Linear Systems\n",
     "subject:  Linear Algebraic Systems\n",
-    "subtitle: solving with nonsingular coefficient matrices\n",
-    "short_title: General Linear Systems\n",
+    "subtitle: There is not always one solution\n",
+    "short_title: 1.8 General Linear Systems\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -529,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
