--- a/00_Ch_1_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Matrices and Vectors\n",
+    "title: 1.3 Matrices and Vectors\n",
     "subject:  Linear Algebraic Systems\n",
     "subtitle: The building blocks of linear algebra\n",
-    "short_title: Matrices and Vectors\n",
+    "short_title: 1.3 Matrices and Vectors\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -692,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
