--- a/00_Ch_1_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Gaussian Elimination Revisited\n",
+    "title: 1.4 Gaussian Elimination Revisited\n",
     "subject:  Linear Algebraic Systems\n",
     "subtitle: Gaussian Elimination as Matrix Factorization\n",
-    "short_title: Gaussian Elimination using Matrices\n",
+    "short_title: 1.4 Gaussian Elimination using Matrices\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -413,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
