--- a/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: LU-Factorization\n",
+    "title: 1.5 LU-Factorization\n",
     "subject:  Linear Algebraic Systems\n",
-    "subtitle: Peeling the Onion\n",
-    "short_title: LU-Factorization\n",
+    "subtitle: A new matrix factorization\n",
+    "short_title: 1.5 U-Factorization\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -324,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
