--- a/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: The Permuted LU-Factorization\n",
+    "title: 1.6 The Permuted LU-Factorization\n",
     "subject:  Linear Algebraic Systems\n",
     "subtitle: Let's mix things up a little\n",
-    "short_title: Permuted LU-Factorization\n",
+    "short_title: 1.6 Permuted LU-Factorization\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -502,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
