--- a/00_Ch_1_Linear_Algebraic_Systems/025-linsys-inverses.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/025-linsys-inverses.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Matrix inverses\n",
+    "title: 1.7 Matrix Inverses\n",
     "subject:  Linear Algebraic Systems\n",
-    "subtitle: reciprocal of matrices\n",
-    "short_title: Matrix inverses\n",
+    "subtitle: How do I divide by a matrix?\n",
+    "short_title: 1.7 Matrix Inverses\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -551,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
