--- a/00_Ch_1_Linear_Algebraic_Systems/027-application-network-flow.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/027-application-network-flow.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Modeling Network Flow using Systems of Equations\n",
-    "subject: Applied Linear Algebra\n",
-    "subtitle: Applying systems of equations to model networked systems\n",
-    "short_title: Modeling Network Flow\n",
+    "title: \"1.9 Case Study: Modeling Network Flow using Systems of Equations\"\n",
+    "subject: Linear Algebraic Systems\n",
+    "subtitle: Just go with the flow\n",
+    "short_title: \"1.9 Case Study: Modeling Network Flow\"\n",
     "authors:\n",
     "  - name: Renukanandan Tumu\n",
     "    affiliations:\n",
@@ -836,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
