--- a/01_Ch_2_Vector_Spaces_and_Bases/031-vector_spaces.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/031-vector_spaces.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Real Vector Spaces\n",
+    "title: 2.1 Real Vector Spaces\n",
     "subject: Vector Spaces and Bases\n",
-    "subtitle: fundamental abstraction of linear algebra\n",
-    "short_title: Real vector spaces\n",
+    "subtitle: Almost everything is a vector\n",
+    "short_title: 2.1 Real vector spaces\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -349,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
