--- a/01_Ch_2_Vector_Spaces_and_Bases/032-subspaces.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/032-subspaces.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Subspaces\n",
+    "title: 2.2 Subspaces\n",
     "subject: Vector Spaces and Bases\n",
-    "subtitle: spaces inside a vector space\n",
-    "short_title: Subspaces\n",
+    "subtitle: A vector space inside a vector space\n",
+    "short_title: 2.2 Subspaces\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -243,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
