--- a/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Span and Linear Independence\n",
+    "title: 2.3 Span and Linear Independence\n",
     "subject: Vector Spaces and Bases\n",
-    "subtitle: building blocks of subspaces\n",
-    "short_title: Span and Linear Independence\n",
+    "subtitle: The building blocks of subspaces\n",
+    "short_title: 2.3 Span and Linear Independence\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -420,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
