--- a/01_Ch_2_Vector_Spaces_and_Bases/034-basis_dim.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/034-basis_dim.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Basis and Dimension\n",
+    "title: 2.4 Basis and Dimension\n",
     "subject: Vector Spaces and Bases\n",
-    "subtitle: Distinct elements of a space\n",
-    "short_title: Basis and Dimension\n",
+    "subtitle: How many directions are there\n",
+    "short_title: 2.4 Basis and Dimension\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -264,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
