--- a/01_Ch_2_Vector_Spaces_and_Bases/035-kernel_image.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/035-kernel_image.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Kernel and Image\n",
+    "title: 2.5 Kernel and Image\n",
     "subject: Vector Spaces and Bases\n",
-    "subtitle: null space and column space of a matrix\n",
-    "short_title: Kernel and Image\n",
+    "subtitle: For our next trick, we'll make this vector disappear\n",
+    "short_title: 2.5 Kernel and Image\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -456,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
