--- a/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Adjoint Systems, Left Null Space, and Row Space\n",
+    "title: 2.6 Adjoint Systems, Left Null Space, and Row Space\n",
     "subject: Vector Spaces and Bases\n",
-    "subtitle: leading to the fundamental thorem\n",
-    "short_title: Adjoint, Left Null and Row Space\n",
+    "subtitle:  More matrix subspaces\n",
+    "short_title: 2.6 Adjoint, Left Null and Row Space\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -395,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
