--- a/01_Ch_2_Vector_Spaces_and_Bases/037-network.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/037-network.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Network Flows Revisited\n",
+    "title: \"2.7 Case Study: Network Flows Revisited\"\n",
     "subject: Vector Spaces and Bases\n",
     "subtitle: linear algebra in electric circuits\n",
-    "short_title: Network Flows\n",
+    "short_title: \"2.7 Case Study: Network Flows\"\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -245,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
